objects/Portal_Password__c.object
<CustomObject>
    <fields>
        <fullName>Current_Password__c</fullName>
        <label>Current Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Change_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Change Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalId>true</externalId>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Portal Password</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Username__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Password_View</fullName>
        <columns>NAME</columns>
        <columns>Username__c</columns>
        <columns>Current_Password__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Username__c</field>
            <operation>equals</operation>
            <value>r.valiev@cckconsulting.ru</value>
        </filters>
        <label>Password View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Portal Password Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Passwords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>